--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="password_text">Password</string>
     <string name="login_text">Login</string>
     <string name="signin_text">Sign In</string>
+    <string name="success_msg">Logged in successfully</string>
+    <string name="yes_button">Ok</string>
+    <string name="no_button">Close</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
